# Forex_AI_Trader

./: README.md  pyproject.toml
.kiro/hooks/: auto-translation-hook.kiro.hook  check-database.kiro.hook  docs-sync-hook.kiro.hook  format-frontend.kiro.hook  format-python.kiro.hook  test-crewai-config.kiro.hook  validate-environment.kiro.hook  validate-video-tools.kiro.hook
.kiro/specs/multimodal-trading-assistant/: design.md  requirements.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
src/forex_ai_agent/: crew.py  main.py
src/forex_ai_agent/config/: agents.yaml  tasks.yaml
src/forex_ai_agent/tools/: __init__.py  crypto_data.py  forex_data.py  market_data.py  news_data.py  strategy_tools.py  video_analysis.py
tests/: test_trading_tools.py
